traq/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traq-backend
  name: traq-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traq-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traq-backend
        pyroscope.io/scrape: "true"
        pyroscope.io/port: "6060"
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      volumes:
        - name: config
          configMap:
            name: traq-config
        - name: keys
          secret:
            secretName: traq-backend-secrets
      containers:
        - image: ghcr.io/traptitech/traq:3.29.2
          name: traq-backend
          args: ["serve", "--pprof"]
          ports:
            - containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/ping
              port: 3000
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - mountPath: /keys
              name: keys
              readOnly: true
            - mountPath: /app/config.yml
              name: config
              readOnly: true
              subPath: traq.yaml
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"

      restartPolicy: Always
