traq/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traq-backend
  name: traq-backend
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 3000
  selector:
    app: traq-backend
