traq/backend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-backend

spec:
  entryPoints:
    - websecure
  tls:
    secretName: traq-tls
  routes:
    - kind: Rule
      match: Host(`q.trap.jp`) && (PathPrefix(`/api/`) || PathPrefix(`/.well-known/`))
      services:
        - namespace: traq
          kind: Service
          name: traq-backend
          port: 8001
          scheme: http
          weight: 1
